--- a/TechnoMarket/TechnoMarket.csproj
+++ b/TechnoMarket/TechnoMarket.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite.Core" Version="8.0.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TechnoMarket.Application\TechnoMarket.Application.csproj" />
+    <ProjectReference Include="..\TechnoMarket.Infrastructure\TechnoMarket.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
